--- a/CrackingtheCoding/.classpath
+++ b/CrackingtheCoding/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="Arrays&amp;Strings"/>
 	<classpathentry kind="src" path="Chapter 10"/>
-	<classpathentry kind="src" path="Chapter 11"/>
+	<classpathentry kind="src" path="Sorting&amp;Searching"/>
 	<classpathentry kind="src" path="Chapter 14"/>
 	<classpathentry kind="src" path="Chapter 16"/>
 	<classpathentry kind="src" path="Moderate"/>
 	<classpathentry kind="src" path="Hard"/>
-	<classpathentry kind="src" path="Chapter 2"/>
+	<classpathentry kind="src" path="LinkedLists"/>
 	<classpathentry kind="src" path="Stacks&amp;Queues"/>
 	<classpathentry kind="src" path="Trees&amp;Graphs"/>
 	<classpathentry kind="src" path="Chapter 5"/>
