--- a/CrackingtheCoding/.classpath
+++ b/CrackingtheCoding/.classpath
@@ -12,8 +12,8 @@
 	<classpathentry kind="src" path="Trees&amp;Graphs"/>
 	<classpathentry kind="src" path="Chapter 5"/>
 	<classpathentry kind="src" path="Chapter 7"/>
-	<classpathentry kind="src" path="Chapter 8"/>
-	<classpathentry kind="src" path="Chapter 9"/>
+	<classpathentry kind="src" path="ObjectOrientedDesign"/>
+	<classpathentry kind="src" path="Recursion&amp;DynamicProgramming"/>
 	<classpathentry kind="src" path="CtCILibrary"/>
 	<classpathentry kind="src" path="Introduction"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
